fixed table alignment issues for the map table and each categories table

--- a/css/C-a-U.scss
+++ b/css/C-a-U.scss
@@ -890,7 +890,7 @@ $cuRed: #881E3D;
       display: none;
     }
 
-    #investment-table-datatable_wrapper {
+    #investment-table-datatable_wrapper, #investment-table-datatable--grants_wrapper, #investment-table-datatable--research_wrapper {
       padding: 0 3rem;
     }
 
